[metadata]
name = self
version = 1.0.1
project_urls = 
	Homepage = https://github.com/looking-for-a-job/self.py	
	Bug Tracker = https://github.com/looking-for-a-job/self.py/issues
classifiers = file: .data/pypi.org/classifiers.txt
description = @self decorator makes method return self (jQuery-like chaining)
long_description = file: .data/pypi.org/README.md
long_description_content_type = text/markdown
keywords = self decorator

[options]
install_requires = 
	decorator	
	public	
	setuptools
packages = 
	self


